# ralph-burning

./: .gitignore  20260311192329-impl-notes.md  20260311193151-impl-response-001.md  20260311215934-impl-notes.md  20260312-impl-notes.md  20260312-loop10-impl-notes.md  20260312005141-impl-response-III.md  20260312190520-impl-notes.md  20260312213455-impl-response-005.md  20260313001001-impl-notes.md  20260313002407-impl-response-III.md  20260314004228-impl-notes.md  20260314065358-impl-response-005.md  20260314084500-impl-notes.md  20260314174145-impl-notes.md  20260314225415-impl-notes.md  20260316120934-impl-response-III.md  20260316144904-impl-response-III.md  20260316173746-impl-response-III.md  20260316192900-impl-response-III.md  20260316233237-impl-response-III.md  20260316235055-impl-response-III.md  20260317001807-impl-response-III.md  20260317003212-impl-response-III.md  20260317004614-impl-response-III.md  20260317010331-impl-response-III.md  20260317015457-impl-response-III.md  20260317052149-impl-response-III.md  20260317055217-impl-response-III.md  20260317060518-impl-response-III.md  20260317071058-impl-response-VI.md  20260317123950-impl-response-III.md  20260317134500-impl-response-III.md  20260317142758-impl-response-III.md  20260317181836-impl-response-III.md  20260318193709-impl-notes.md  20260318200407-impl-response-III.md  20260318232830-impl-response-001.md  20260318234426-impl-response-002.md  20260319005521-impl-response-007.md  (+20 more)
ralph-burning-rewrite/: 20260311-loop6-impl-notes.md  20260311184405-impl-notes.md  20260311224813-impl-response-001.md  (+39 more)
(+7241 files in other folders)
